Refactor code structure for improved readability and maintainability

--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "2.0.0-beta.1",
+    "@ai-sdk/cohere": "2.0.0-beta.1",
+    "@ai-sdk/google": "2.0.0-beta.1",
+    "@ai-sdk/mistral": "2.0.0-beta.1",
+    "@ai-sdk/openai": "2.0.0-beta.1",
     "@ai-sdk/provider": "2.0.0-beta.1",
     "@ai-sdk/react": "2.0.0-beta.6",
     "@ai-sdk/xai": "2.0.0-beta.2",
-    "@ai-sdk/openai": "2.0.0-beta.1",
-    "@ai-sdk/anthropic": "2.0.0-beta.1",
-    "@ai-sdk/google": "2.0.0-beta.1",
-    "@ai-sdk/mistral": "2.0.0-beta.1",
-    "@ai-sdk/cohere": "2.0.0-beta.1",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-python": "^6.1.6",
     "@codemirror/state": "^6.5.0",
@@ -89,6 +89,7 @@
     "resumable-stream": "^2.0.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
+    "styled-jsx": "^5.1.7",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
