--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "dependencies": {
+    "@21st-extension/react": "^0.5.14",
+    "@21st-extension/toolbar-next": "^0.5.14",
     "@ai-sdk/anthropic": "2.0.0-beta.1",
     "@ai-sdk/cohere": "2.0.0-beta.1",
     "@ai-sdk/google": "2.0.0-beta.1",
@@ -40,9 +42,11 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@vercel/analytics": "^1.3.1",
@@ -97,7 +101,7 @@
     "zod": "^3.25.68"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.2.0",
     "@playwright/test": "^1.50.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/d3-scale": "^4.0.8",
@@ -115,7 +119,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "ultracite": "5.2.3"
   },
   "packageManager": "pnpm@9.12.3"
 }
